seeds.rb changed

--- a/app/assets/stylesheets/flatly/loader.css.less
+++ b/app/assets/stylesheets/flatly/loader.css.less
@@ -269,4 +269,8 @@ font-family: 'Lustria', Georgia, serif;
 .extend{
     width: 1290px;
 }
+.slide_edit{
+    width: 100% ;
+  height: 250px ;
+}
 // @import "twitter/bootstrap/theme";
