--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,7 +4,6 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Slug</th>
       <th>Description</th>
       <th>Short name</th>
       <th>Campus</th>
@@ -16,13 +15,12 @@
     <% @groups.each do |group| %>
       <tr>
         <td><%= group.name %></td>
-        <td><%= group.slug %></td>
         <td><%= group.description %></td>
         <td><%= group.short_name %></td>
-        <td><%= group.campus %></td>
-        <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= group.campus.name %></td>
+        <td><%= link_to 'Show', campus_group_path(group.campus, group) %></td>
+        <td><%= link_to 'Edit', edit_campus_group_path(group.campus, group) %></td>
+        <td><%= link_to 'Destroy', campus_group_path(group.campus, group), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Group', new_group_path %>
+<%= link_to 'New Group', new_campus_group_path %>
