--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@group) do |f| %>
+<%= form_for [@campus,@group] do |f| %>
   <% if @group.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@group.errors.count, "error") %> prohibited this group from being saved:</h2>
@@ -28,6 +28,7 @@
     <%= f.text_field :short_name %>
   </div>
   <div class="field">
+    <%= f.collection_select :campus_id, Campus.all, :id, :name, {prompt: "Select campus"} %><br>
     <%= f.label :campus_id %><br>
     <%= f.text_field :campus_id %>
   </div>
