--- a/app/views/refresh/index.html.erb
+++ b/app/views/refresh/index.html.erb
@@ -21,16 +21,32 @@
     <legend>Filter by </legend>
       <%= form_tag refresh_path, :method => :get do %>
     <div class="form-group">
-      <%= select("category", "category_id",Category.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Fill Category'},{class: "form-control"}) %>  
-      <%= select("domain", "domain_id", Domain.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Fill Domain'},{class: "form-control"}) %>  
-      <%= select("eligible", "eligible_id", Eligible.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Fill Eligible'},{class: "form-control"}) %>
+      <%= collection_select(nil, "category_ids",Category.all.to_a,:id,:name, {include_blank: 'Fill Category'},{class: "form-control"}) %>  
+      <%= collection_select(nil, "domain_ids", Domain.all.to_a,:id, :name, {include_blank: 'Fill Domain'},{class: "form-control"}) %>  
+      <%= collection_select(nil, "eligible_ids", Eligible.all.to_a, :id, :name,{include_blank: 'Fill Eligible'},{class: "form-control"}) %>
      <%=submit_tag "Search"%>
     <% end %> 
    </div>
   </div>
 </div>
 <div class="col-lg-10">  
-  <legend>Filtered by: <%= "Oops! No Events!" if @all.blank?%><%= "Keyword: #{@search}" if @search.present?%><a class="label label-success"><%= @cat.name if @cat.present? %> </a><a class="label label-primary"><%= @dom.name if @dom.present? %></a><a class="label label-info"> <%= @eli.name if @eli.present? %></a></legend>
+  <legend>Filtered by: <%= "Oops! No Events!" if @all.blank?%><%= "Keyword: #{@search}" if @search.present?%>
+  <% if @cat_items %>
+  <% @cat_items.each do |category| %>
+     <a class="label label-warning"> <%=category.name%></a>
+      <% end %>
+      <% end %>
+      <% if @dom_items %>
+   <% @dom_items.each do |domain| %>
+     <a class="label label-primary"> <%=domain.name%></a>
+      <% end %>
+      <% end %>
+      <% if @eli_items %>
+      <% @eli_items.each do |eligible| %>
+     <a class="label label-primary opac"> <%=eligible.name%></a>
+      <% end %>
+      <% end %>   
+  </legend></a>
   <%= render partial: "static_pages/event", collection: @all %>
   </div>
  </div>
