--- a/app/views/static_pages/_slider.html.erb
+++ b/app/views/static_pages/_slider.html.erb
@@ -4,9 +4,9 @@
           <div class="item active">
             <div class="row">
               <%# render partial: "box", collection: @categories.limit(12) %>                  
-            <%= collection_check_boxes(nil,:category_ids, Category.all.limit(12).to_a, :id, :name) do |b|
+            <%= collection_check_boxes(nil,:category_ids, Category.all.limit(10).to_a, :id, :name) do |b|
                 b.label(class: "label_box",style:"background: url(
-            #{Category.find(b.value).image_url}) ;width: 15%; height: 120px;"){ b.check_box(class: "hide") + b.text}
+            #{Category.find(b.value).image_url});"){ b.check_box(class: "hide") + b.text}
                         end %>                          
             </div>
           </div>
@@ -15,7 +15,7 @@
             <div class="row">
             <%= collection_check_boxes(nil,:category_ids, Category.all.offset(12).to_a, :id, :name) do |b|
                 b.label(class: "label_box",style:"background: url(
-            #{Category.find(b.value).image_url}) ;width: 15%; height: 120px;"){ b.check_box(class: "hide") + b.text}
+            #{Category.find(b.value).image_url}) ;"){ b.check_box(class: "hide") + b.text}
                         end %>    <%# render partial: "box", collection: @categories.offset(12) %>        
             </div>
           </div>
@@ -23,7 +23,7 @@
             <div class="row">
               <%= collection_check_boxes(nil,:domain_ids, Domain.all.limit(12).to_a, :id, :name) do |b|
                   b.label(class: "label_box",style:"background: url(
-            #{Domain.find(b.value).image_url}) ;width: 15%; height: 120px;"){ b.check_box(class: "hide") + b.text}
+            #{Domain.find(b.value).image_url}) ;"){ b.check_box(class: "hide") + b.text}
                         end %>  
             </div>
           </div>
