--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,52 +4,15 @@
 <br>
        <div class="row">
        <div class="col-lg-2">
-    <br>
-
-  
-    <div class="list-group">
-  <a href="<%= sort_path(:num => 0)%>" class="list-group-item">
-    Today
-  </a>
-  <a href="<%=sort_path(:num => 1)%>" class="list-group-item">Tomorrow
-  </a>
-  <a href="<%=sort_path(:week => 7)%>" class="list-group-item">This Week
-  </a>
-  <a href="<%=sort_path(:month => 7)%>" class="list-group-item active">This Month
-  </a>
- 
-</div>
-<div class="well">
-<legend>Filter by Date</legend>
-<%= form_tag sort_path, :method => :get do %>
- <%= select_date(date = Date.current, {order: [:day, :month, :year]}, {:class=>"form-control"}) %>
-<%=submit_tag ">", class: "btn btn-primary btn-sm" %>
-
-   <% end %>
-
-   </div>
-   <div class="well">
-<legend>Filter by </legend>
-<%= form_tag refresh_path, :method => :get do %>
-<div class="form-group">
-   <%= select("category", "category_id",Category.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Fill Category'},{class: "form-control"}) %>
-   
-   <%= select("domain", "domain_id", Domain.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Fill Domain'},{class: "form-control"}) %>
-   
-   <%= select("eligible", "eligible_id", Eligible.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Fill Eligible'},{class: "form-control"}) %>
-   
-   <%=submit_tag "Search"%>
-   <% end %> 
-    </div>
-    </div>
-   </div>
+    <br> 
+   <%= render partial: "shared/sidebar"%>
 <div class="col-lg-10">
         <div class="page-header">
           <h1>All Events</h1>
         </div>
         <%= render partial: "static_pages/event", collection: @events %> 
         
-<%= will_paginate @events, class:"pager" %>
+        <%= will_paginate @events, class:"pager" %>
     <%= button_to 'Add an Event', new_event_path, method: 'get', class: "btn btn-primary btn-sm" %>
     <!-- End: MAIN CONTENT -->
     <!-- Start: FOOTER -->
