--- a/app/views/refresh/index.html.erb
+++ b/app/views/refresh/index.html.erb
@@ -4,31 +4,7 @@
   <div class="row">
    <div class="col-lg-2">
     <br>  
-    <div class="list-group">
-      <a href="<%= sort_path(:num => 0)%>" class="list-group-item">Today</a>
-      <a href="<%=sort_path(:num => 1)%>" class="list-group-item">Tomorrow</a>
-      <a href="<%=sort_path(:week => 7)%>" class="list-group-item">This Week</a>
-      <a href="<%=sort_path(:month => 7)%>" class="list-group-item">This Month</a> 
-    </div>
-    <div class="well">
-      <legend>Filter by Date</legend>
-        <%= form_tag sort_path, :method => :get do %>
-        <%= select_date(date = Date.current, {order: [:day, :month, :year]}, {:class=>"form-control"}) %>
-        <%=submit_tag ">", class: "btn btn-primary btn-sm" %>
-        <% end %>
-   </div>
-   <div class="well">
-    <legend>Filter by </legend>
-      <%= form_tag refresh_path, :method => :get do %>
-    <div class="form-group">
-      <%= collection_select(nil, "category_ids",Category.all.to_a,:id,:name, {include_blank: 'Fill Category'},{class: "form-control"}) %>  
-      <%= collection_select(nil, "domain_ids", Domain.all.to_a,:id, :name, {include_blank: 'Fill Domain'},{class: "form-control"}) %>  
-      <%= collection_select(nil, "eligible_ids", Eligible.all.to_a, :id, :name,{include_blank: 'Fill Eligible'},{class: "form-control"}) %>
-     <%=submit_tag "Search"%>
-    <% end %> 
-   </div>
-  </div>
-</div>
+    <%= render partial: "shared/sidebar"%>
 <div class="col-lg-10">  
   <legend>Filtered by: <%= "Oops! No Events!" if @all.blank?%><%= "Keyword: #{@search}" if @search.present?%>
   <% if @cat_items %>
