--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -12,8 +12,10 @@
 </div>
 <div class="well">
 <legend><div class="tour_8"></div>Filter by Date</legend>
-<%= form_tag sort_path, :method => :get, class:"form-horizontal" do %>
- <%= select_date(Date.current, {order: [:day, :month, :year]}, {:class=>"form-control"}) %>
+<%= form_tag sort_path, :method => :get, class:"form-horizontal" do |u| %>
+<%= date_field :event, :startdatesearch,readonly: "readonly", class: 'form-control',placeholder: 'From' %> 
+<%= date_field :event, :enddatesearch, readonly: "readonly",class: 'form-control',placeholder: 'To' %>
+ <%# select_date(Date.current, {order: [:day, :month, :year]}, {:class=>"form-control"}) %>
 <%=submit_tag ">", class: "btn btn-primary btn-sm"%>
 
    <% end %>
@@ -23,9 +25,9 @@
 <legend>Filter by </legend>
 <%= form_tag refresh_path, :method => :get do %>
 <div class="form-group">
-   <%= select("category", "category_id",Category.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Type'},{class: "form-control"}) %>
+   <%= select("category", "category_id",Category.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Topic'},{class: "form-control"}) %>
    
-   <%= select("domain", "domain_id", Domain.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Topic'},{class: "form-control"}) %>
+   <%= select("domain", "domain_id", Domain.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Type'},{class: "form-control"}) %>
    
    <%= select("eligible", "eligible_id", Eligible.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'Eligibility'},{class: "form-control"}) %>
    
