--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,17 +11,45 @@
     <% end %>
      <div class="container">   
       <div class="row">    
-        <h1 class="tour_1 fontedits" >Thousands of events around your campus. </h1>
-        <h4 class="fontedits" > Events that interest you are just a click away!</h4> <br>
-        <h5 class="fontedits">Pick up your interests </h5>
+        <h1 class="tour_1 fontedits" >Thousands of events around your campus</h1>
+        <!--<h3 class="fontedits" > Events that interest you are just a click away!</h3> <br>-->
+        <h4 class="fontedits">Choose your interests</h4>
     <!---<div class="fb-like-box" data-href="http://www.facebook.com/Kampusbeecom" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>-->
    <%# render partial: "shared/video" %>
         <%= form_tag refresh_path, :method => :get do %><br>
         <%= render partial: "static_pages/slider" %><br> <br>     
         
         <%=submit_tag "Start exploring",class:"btn btn-primary btn-lg wireframe move fontedits" %>
+        <%=link_to "Skip >>",all_campus_path, class:"btn btn-primary btn-xs wireframe move fontedits skip_move" %>
         <% end %>    
       </div><br><br><br> <br>
+        <%= form_tag search_path, :method => :get do %>                   
+        <div class="row">    
+        <div class="col-lg-6">    
+      <%= text_field_tag :search, nil, placeholder: 'Search',class:"form-control" %> 
+      </div>
+      <div class="col-lg-6">    
+      <%= button_tag :search,class:"btn-primary btn-md" %> 
+      </div>
+      </div>
+      <div class="input-group">
+                    <span class="input-group-addon">$</span>
+                    <input type="text" class="form-control">
+                    <span class="input-group-btn">
+                      <div class="btn-group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                      Dropdown
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Dropdown link</a></li>
+                      <li><a href="#">Dropdown link</a></li>
+                      <li><a href="#">Dropdown link</a></li>
+                     </ul>
+                  </div>
+                    </span>
+                  </div>
+        <% end %> 
     <div class="row">
      <div class="col-lg-7"> 
       <ul class="list_style">
