--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
         <div class="row">
           
           <div class="col-lg-3">
-            <h4><i class="icon-beaker icon-white"></i> About<h4>
+            <h4><i class="fa fa-beaker icon-white"></i> About<h4>
             
               <ul class="quick-links">
                 <li><a href="<%=about_path%>">About Us</a></li>
@@ -16,7 +16,7 @@
                       
           </div>
           <div class="col-lg-3">
-            <h4><i class="icon-thumbs-up icon-white"></i> Support</h4>
+            <h4><i class="fa fa-thumbs-up fa-white"></i> Support</h4>
             
               <ul class="quick-links">
                 <li><a href="<%=faq_path%>">FAQ</a></li>
@@ -30,19 +30,19 @@
                 <li><a href="#">Terms of Use</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Security</a></li>      
-              </ul>----->
+              </ul>-->
                       
           </div>
           <div class="col-lg-3">
             <h4>Get in touch</h4>
             <div class="social-icons-row">
-              <a href="https://twitter.com/kampusbee"><i class="icon-twitter"></i></a>
+              <a href="https://twitter.com/kampusbee"><i class="fa fa-twitter"></i></a>
               <a href="https://www.facebook.com/pages/Kampusbeecom/620695481313043?fref=ts"><i class="icon-facebook"></i></a>
-              <a href="#"><i class="icon-google-plus"></i></a>             <a href="mailto:kampusbee@gmail.com"><i class="icon-envelope"></i></a>                            
+              <a href="#"><i class="fa fa-google-plus"></i></a>             <a href="mailto:kampusbee@gmail.com"><i class="icon-envelope"></i></a>                            
             </div>
             
             <div class="social-icons-row">
-              <i class="icon-phone icon-large phone-number"></i> +918884056308
+              <i class="fa fa-phone phone-number"></i> +918884056308
             </div>
           </div>      
           <div class="col-lg-3">
@@ -50,7 +50,7 @@
             <form>
               <input type="text" name="email" placeholder="Email address">
               <input type="submit" class="btn btn-primary" value="Subscribe">
-            </form>--->
+            </form>-->
           </div>
         </div>
       </div>
