--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -11,12 +12,11 @@
  *= require_self
  *= require flatly/loader
  *= require flatly/bootswatch
- *= require font-awesome.min
- *= require font-awesome-ie7
  *= require boot-business
  *= require jquery.jquerytour
  *= require jquery.datetimepicker
+ *= require font-awesome
  */
- 
+@import "compass";
 
 
