--- a/app/assets/stylesheets/boot-business.css.erb
+++ b/app/assets/stylesheets/boot-business.css.erb
@@ -665,7 +665,7 @@ margin-right: 0.5em;
 font-size: 2em;
 }
 /**from less**/
-.btn-default{margin:1px}.row{margin-left:-15px}.alert-warning{background-color:#fff;border-color:#F39C12;color:#2C3E50}.alert{padding:0;border:0 solid transparent}.alert-dismissable{padding-right:0}.popover-content{word-wrap:break-word}.pager .next>a,.pager .next>span{float:none}footer{color:#fff}.eventHeadclr{font-family:'Lustria', Georgia, serif;font-size:23px;color:#18BC9C}.eventrow1{width:40px}.eventrow2{width:60%;word-wrap:break-word}.eventspc{margin-bottom:0}.eventstr{margin-top:0}.table>tbody>tr>td >{padding-bottom:2px;padding-top:2px}body{padding-top:60px;padding-bottom:40px}.sidebar-nav{padding:9px 0}.dropdown-menu .sub-menu{left:100%;position:absolute;top:0;visibility:hidden;margin-top:-1px}.dropdown-menu li:hover .sub-menu{visibility:visible}.dropdown:hover .dropdown-menu{display:block}.nav-pills .dropdown-menu,.nav-tabs .dropdown-menu,.navbar .dropdown-menu{margin-top:0}.dropdown-toggle li:hover .sub-menu{visibility:visible}.dropdown-toggle:hover .dropdown-menu{display:block}.eventbtn{margin-right:0;margin-left:-16;border-left-width:37px;width:114px;height:23px;border-top-width:0;padding-top:1px}.alert-dismissable .close{right:0;width:16px;height:21px}.nav>li>a:focus,.nav>li>a:hover{background-color:#2C3E50}.dropdown-menu {margin: 0px 0 0;}
+.btn-default{margin:1px}.row{margin-left:-15px}.alert-warning{background-color:#fff;border-color:#F39C12;color:#2C3E50}.alert{padding:0;border:0 solid transparent}.alert-dismissable{padding-right:0}.popover-content{word-wrap:break-word}.pager .next>a,.pager .next>span{float:none}footer{color:#fff}.eventHeadclr{font-family:'Lustria', Georgia, serif;font-size:23px;color:#18BC9C}.eventrow1{width:40px}.eventrow2{width:60%;word-wrap:break-word}.eventspc{margin-bottom:0}.eventstr{margin-top:0}.table>tbody>tr>td >{padding-bottom:2px;padding-top:2px}body{padding-top:60px;padding-bottom:40px}.sidebar-nav{padding:9px 0}.dropdown-menu .sub-menu{left:100%;position:absolute;top:0;visibility:hidden;margin-top:-1px}.dropdown-menu li:hover .sub-menu{visibility:visible}.dropdown:hover .dropdown-menu{display:block}.nav-pills .dropdown-menu,.nav-tabs .dropdown-menu,.navbar .dropdown-menu{margin-top:0}.dropdown-toggle li:hover .sub-menu{visibility:visible}.dropdown-toggle:hover .dropdown-menu{display:block}.eventbtn{margin-right:0;margin-left:-16;border-left-width:37px;width:114px;height:23px;border-top-width:0;padding-top:1px}.alert-dismissable .close{width:16px;height:21px}.nav>li>a:focus,.nav>li>a:hover{background-color:#2C3E50}.dropdown-menu {margin: 0px 0 0;}
 .resp {}.resp1{}.resp2{}.resp3{margin-left: 0px;margin-right: 0px;}
 .what {float: right;}
 .event_title { font-family: 'Lustria', Georgia, serif;color: rgba(248, 131, 5, 0.9) !important;font-size: 23px;}
@@ -712,7 +712,7 @@ top: 70% !important;}
 .resp2{float: right;}
 .resp3{margin-left: 0px;margin-right: -12px;}
 .btn .caret { margin-left: 14px;}
-.alert-dismissable .close{right:-21px;width:10px;height:21px}
+.alert-dismissable .close{top: 2px !important;right:17px !important;width:28px !important;height:22px !important}
 }
 a {
 color: rgba(248, 131, 5, 0.9) ;
@@ -722,12 +722,7 @@ a:hover, a:focus {
 }
 .splash {
 padding: 3em 0 2em;
-//background: linear-gradient(20deg, #BFD32D 30%, #2B4B5A 87%, #435E67 100%);
-//background: -webkit-linear-gradient(70deg, #BFD32D 30%, #2B4B5A 87%, #435E67 100%);
-//background: -o-linear-gradient(70deg, #BFD32D 30%, #2B4B5A 87%, #435E67 100%);
-//background: -ms-linear-gradient(70deg, #BFD32D 30%, #2B4B5A 87%, #435E67 100%);
-//background: -moz-linear-gradient(70deg, #BFD32D 30%, #2B4B5A 87%, #435E67 100%);
-//background: linear-gradient(20deg, #BFD32D 30%, #2B4B5A 87%, #435E67 100%);
+@include background(linear-gradient(20deg, #BFD32D 30%, #2B4B5A 87%, #435E67 100%));
 background: rgba(248, 131, 5, 0.9);
 background-attachment: fixed;
 color: white;
@@ -905,4 +900,12 @@ font-family: 'Lustria', Georgia, serif;
     width: 100% ;
   height: 100%; ;
   min-height: 250px;
+}
+.input-lg{
+  height: 50px;
+padding: 10px 16px;
+font-size: 18px;
+line-height: 1.33;
+border-radius: 0px;
+}
 }
