--- a/app/views/campuses/new.html.erb
+++ b/app/views/campuses/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New campus</h1>
+<div class="container">
+<div class="row">
+ <div class="col-lg-6 col-lg-offset-2">
+<h1>Add your campus info</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', campuses_path %>
+</div>
+ </div>
+ </div>
