--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
       <%= f.password_field :password, :placeholder =>'Password'%>
       <%= f.password_field :password_confirmation, :placeholder =>'Confirmation' %><br>
        <%# f.hidden_field :name, value:"New-Bee", readonly: "readonly" %>
-       <%= f.collection_select :campus, Campus.all, :id, :name,{:prompt => 'Please select your campus'} %>
+       <%# f.collection_select :campus, Campus.all, :id, :name,{:prompt => 'Please select your campus'} %>
      <%= f.hidden_field :role,class: 'form-control', value: "user", readonly: "readonly" %><br><br>      
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>               
