--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,16 +23,17 @@
         <%=link_to "Skip >>",all_campus_path, class:"btn btn-primary btn-xs wireframe move fontedits skip_move" %>
         <% end %>    
       </div><br><br><br> <br>
-        <%= form_tag search_path, :method => :get do %>                   
-        <div class="row">    
-        <div class="col-lg-6">    
-      <%= text_field_tag :search, nil, placeholder: 'Search',class:"form-control" %> 
+    <%= form_tag search_path, :method => :get do %>                   
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-1">
+        <input type="text" class="form-control input-lg">
+       </div>
+       <div class="col-lg-2">
+        <%=submit_tag "Search",class:"btn btn-primary btn-sm input-lg btn-block" %>
+        </div>
       </div>
-      <div class="col-lg-6">    
-      <%= button_tag :search,class:"btn-primary btn-md" %> 
-      </div>
-      </div>
-      <div class="input-group">
+    <br>
+   <!--     <div class="input-group">
                     <span class="input-group-addon">$</span>
                     <input type="text" class="form-control">
                     <span class="input-group-btn">
@@ -48,16 +49,16 @@
                      </ul>
                   </div>
                     </span>
-                  </div>
-        <% end %> 
+                  </div>-->
+        <% end %>     
     <div class="row">
      <div class="col-lg-7"> 
       <ul class="list_style">
-      <li><span class="fa fa-users"></span>Stay notified about latest happenings in and around your campus</li>
-      <li><span class="fa fa-envelope"></span>Create events for free. It's supereasy.</li>
-      <li><span class="fa fa-lock"></span>Follow users/organizers to check out the events they are attending/organizing</li>
-      <li><span class="fa fa-envelope"></span>Push alerts to google calendar and facebook just by a single click! Stay notified!</li>      
-      <li><span class="fa fa-envelope"></span>Subscribe to our newsletter to get to know about latest events catalogue. We don't spam.</li>
+      <li><span class="fa fa-institution"></span>Stay notified about latest happenings in and around your campus</li>
+      <li><span class="fa fa-thumbs-up"></span>Create events for free. It's supereasy.</li>
+      <li><span class="fa fa-lock"></span>Follow users/organizers/campuses/campus groups to Stay informed about your favorite events.</li>
+      <li><span class="fa fa-hand-o-right"></span>Set up reminders just by a single click!</li>      
+      <li><span class="fa fa-envelope"></span>Subscribe to our newsletter to get to know about latest events catalogue</li>
       <li><span class="fa fa-comments"></span>Easy signup using social network logins</li>                      
       </ul>
     </div>    
@@ -84,8 +85,7 @@
  </div>
 </div> 
 </div>
-    </div>
-        <!--======================= Center stufff===============-->
+</div>        <!--======================= Center stufff===============-->
 <div class="container">
 	<div class="row">
 
@@ -151,11 +151,6 @@
 	</div>
 </div>
 
-    <!-- ==================================================================================== -->
-    <!-- <div class="col-lg-4 col-lg-offset-4">
-            <input type="search" id="container-search" value="" class="form-control" placeholder="Search...">
-        </div>--> 
-        
   <div class="featurette" id="sec2">
     <div class="container">
       <div class="row">
@@ -166,14 +161,14 @@
     <div class="row">
       <div class="col-md-2 col-md-offset-2 text-center">
         <div class="featurette-item">
-          <i class="icon-bell"></i>
+          <i class="fa fa-bell"></i>
           <h4>Alerts</h4>
           <p>Setting up social alerts is a piece of cake</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
         <div class="featurette-item">
-          <i class="icon-star"></i>
+          <i class="fa fa-star"></i>
           <h4>Events</h4>
           <p>Now creating events is free and super-easy</p>
         </div>
@@ -187,7 +182,7 @@
       </div>
       <div class="col-md-2 text-center">
         <div class="featurette-item">
-          <i class="icon-pencil"></i>
+          <i class="fa fa-pencil"></i>
           <h4>Interests</h4>
           <p>Set up your interests. Get notified about latest events as per your preferences.</p>
         </div>
