--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -39,21 +39,30 @@
          </div>               
                 
      <div class="col-lg-8">        
-                        <%= f.collection_check_boxes(:eligible_ids, Eligible.all, :id, :name) do |b|
-                          b.label(class:"btn btn-default btn-xs category") { b.check_box(class: "hide") + b.text }
-                        end %>
-                </div>
-              </div>
-              <div class="row">
+          <%= f.collection_check_boxes(:eligible_ids, Eligible.all, :id, :name) do |b|
+             b.label(class:"btn btn-default btn-xs category") { b.check_box(class: "hide") + b.text }
+           end %>
+        </div>
+      </div>    
+      <div class="row">
+        <div class="col-lg-2">
+             <%=f.label :campus_id, 'Campus:' %>
+         </div>               
+                
+        <div class="col-lg-8">  
+              <%= f.collection_select :campus, Campus.all, :id, :name,{class: "form-control"},{:prompt => 'Please select your campus'} %>
+          </div>
+        </div>
+      <div class="row">
         <div class="col-lg-2">
          <%= f.label :aboutme, "About me" %>
         </div>
         <div class="col-lg-8">
               <%= f.text_area :aboutme, :size => "65x5", :class => "form-control" %>
-          </div>
-           </div>
+        </div>
+      </div>
 
-              </div>  
+    </div>  
             
     <%= f.submit "Update", class: "btn btn-large btn-primary" %> 
           <% end %>
