--- a/app/assets/stylesheets/flatly/loader.css.less
+++ b/app/assets/stylesheets/flatly/loader.css.less
@@ -19,7 +19,7 @@
 @import "twitter/bootstrap/forms";
 @import "twitter/bootstrap/buttons";
 @import "twitter/bootstrap/component-animations";
-@import "twitter/bootstrap/glyphicons";
+//@import "twitter/bootstrap/glyphicons";
 @import "twitter/bootstrap/dropdowns";
 @import "twitter/bootstrap/button-groups";
 @import "twitter/bootstrap/input-groups";
