--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kampusbee.com | Stay informed! ">
+    <meta name="description" content="Kampusbee.com | Campus Events/College Events ">
     <meta name="author" content="Narendra">
+    <meta name="keywords" content="Campus Events, Fests, College Events, workshops, seminars, conferences, campus buzz">
     <title>kampusbee.com</title>
     <!-- Bootstrap -->
     <%= stylesheet_link_tag  "application" %>    
