--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
       <div class="row">    
         <h1 class="tour_1 fontedits" >Thousands of events around your campus</h1>
         <!--<h3 class="fontedits" > Events that interest you are just a click away!</h3> <br>-->
-        <h4 class="fontedits">Choose your interests</h4>
+        <h4 class="fontedits">....just a click away....</h4>
     <!---<div class="fb-like-box" data-href="http://www.facebook.com/Kampusbeecom" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>-->
    <%# render partial: "shared/video" %>
         <%= form_tag refresh_path, :method => :get do %><br>
@@ -94,7 +94,7 @@
 				<div class="icon">
 					<div class="image"><i class="fa fa-thumbs-o-up"></i></div>
 					<div class="info">
-						<h3 class="title">Creating events is free</h3>
+						<h3 class="title">Event Organizers</h3>
 						<p>
 						  You can create event pages for any event in no time. It's free and supereasy. 
 						</p>
@@ -163,14 +163,14 @@
         <div class="featurette-item">
           <i class="fa fa-bell"></i>
           <h4>Alerts</h4>
-          <p>Setting up social alerts is a piece of cake</p>
+          <p>Stay In Sync</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
         <div class="featurette-item">
           <i class="fa fa-star"></i>
           <h4>Events</h4>
-          <p>Now creating events is free and super-easy</p>
+          <p>Access Everywhere</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
@@ -183,7 +183,7 @@
       <div class="col-md-2 text-center">
         <div class="featurette-item">
           <i class="fa fa-pencil"></i>
-          <h4>Interests</h4>
+          <h4>Maximize Visibility</h4>
           <p>Set up your interests. Get notified about latest events as per your preferences.</p>
         </div>
       </div>
