--- a/app/assets/stylesheets/boot-business.css.erb
+++ b/app/assets/stylesheets/boot-business.css.erb
@@ -680,8 +680,9 @@ height: 288px;
    margin-bottom: 0px;
     border: 3px solid black;
     margin: 3px;
-    width: 40% !important;
+    width: 100% !important;
     height: 80px;
+    color: white;
 }
 .label_add {
     border: 3px solid white;
@@ -829,8 +830,9 @@ img {
    margin-bottom: 0px;
     border: 3px solid black;
     margin: 3px;
-    width: 18%;
+    width: 100%;
     height: 120px;
+    color: white;
 }
 .label_add {
     border: 3px solid white;
@@ -905,4 +907,9 @@ padding: 10px 16px;
 font-size: 18px;
 line-height: 1.33;
 border-radius: 0px;
+}
+.background{
+  padding: 6em 0 2em;
+  background: url(<%= asset_path 'assets/slide-7.jpg' %>);
+  background-size: cover;
 }
