--- a/app/views/shared/_group.html.erb
+++ b/app/views/shared/_group.html.erb
@@ -1,5 +1,7 @@
-<div class ="row">
 
-<div class="col-lg-8"><label for="img1"><img class="img-responsive" src="http://2.bp.blogspot.com/-H6MAoWN-UIE/TuRwLbHRSWI/AAAAAAAABBk/89iiEulVsyg/s400/Free%2BNature%2BPhoto.jpg" /></label><div class="imgbox"><input type="checkbox" checked="checked" id="img1" name="img1" value="0"  /><p class="imgtext"><%=group.name%></p></div></div>
-
+<div class="col-lg-2">
+<a href="<%=refresh_path(topic_ids: group.id)%>">
+<label class ="label_box" style="background: url(<%=group.image_url if group.image_url%>)"><span><%=group.name%></span>
+</label>
+</a>
 </div>
