--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -13,8 +13,8 @@
 <div class="well">
 <legend><div class="tour_8"></div>Filter by Date</legend>
 <%= form_tag sort_path, :method => :get, class:"form-horizontal" do |u| %>
-<%= date_field :event, :startdatesearch,readonly: "readonly", class: 'form-control',placeholder: 'From' %> 
-<%= date_field :event, :enddatesearch, readonly: "readonly",class: 'form-control',placeholder: 'To' %>
+<%= date_field :event, :startdatesearch,readonly: "readonly", class: 'form-control',placeholder: 'From', value: @sdate %> 
+<%= date_field :event, :enddatesearch, readonly: "readonly",class: 'form-control',placeholder: 'To', value: @edate %>
  <%# select_date(Date.current, {order: [:day, :month, :year]}, {:class=>"form-control"}) %>
 <%=submit_tag ">", class: "btn btn-primary btn-sm"%>
 
